# ffmpegDemos

./: README.md
aac_decode/: audiothread.cpp  audiothread.h  ffmpegs.cpp  ffmpegs.h  mainwindow.ui
aac_encode/: aac_encode.pro  audiothread.cpp  ffmpegs.cpp  ffmpegs.h  mainwindow.h  mainwindow.ui
audio_encode/: audio_encode.pro  mainwindow.ui
audio_record/: audio_record.pro  audiorecordthread.cpp  ffmpegs.cpp  ffmpegs.h  ffmpegs.h.autosave  main.cpp  mainwindow.cpp  mainwindow.h
audio_record_wav/: audio_record_wav.pro  audiorecordthread.cpp  audiorecordthread.h  ffmpegs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
audio_resample/: audio_resample.pro  audiothread.cpp  audiothread.h  ffmpegs.cpp  ffmpegs.h  mainwindow.cpp  mainwindow.ui
build-aac_decode-qt-Debug/: Makefile  moc_audiothread.cpp  moc_mainwindow.cpp  ui_mainwindow.h
build-aac_encode-Replacement_for_Qt_6_2_4_for_macOS-Debug/: Makefile  moc_audiothread.cpp  moc_mainwindow.cpp  ui_mainwindow.h
build-audio_encode-qt-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-audio_record-Qt_6_2_4_for_macOS-Debug/: Makefile  moc_audiorecordthread.cpp  moc_mainwindow.cpp  ui_mainwindow.h
demuxer/: audiothread.cpp  (+6 more)
ffmpeg_flutter/android/app/: CMakeLists.txt  build.gradle
ffmpeg_flutter/android/app/src/main/: AndroidManifest.xml
ffmpeg_flutter/android/app/src/main/cpp/: CMakeLists.txt  MP3Encoder.cpp  MP3Encoder.h  samplelib.cpp
ffmpeg_flutter/android/app/src/main/java/cn/waitwalker/ffmpeg_flutter/: JNI.java  MainActivity.java
ffmpeg_flutter/android/app/src/profile/: AndroidManifest.xml
(+548 files in other folders)
